spacing issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -302,5 +302,5 @@ a {
 	display: inline-block;
 	padding: 1em;
 	background: white;
-	margin-left: 2em;
+	margin: 1em;
 }
